modulo del control de inventario
la primera interfaz...

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Sticky Footer Navbar Template for Bootstrap</title>
+    <title>Inventario de Balones</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/soda.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="sticky-footer-navbar.css" rel="stylesheet">
@@ -28,25 +29,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Hogas SAC</a>
           <div class="nav-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
+             <ul class="nav navbar-nav">
+                  <li><a href="#">Salida de balones</a></li>
+                  <li><a href="#">Ingreso de balones</a></li>
+                  <li><a href="#">Llenado de balones</a></li>
                   <li class="divider"></li>
-                  <li class="dropdown-header">Nav header</li>
-                  <li><a href="#">Separated link</a></li>
-                  <li><a href="#">One more separated link</a></li>
+                 <li><a href="#">Ver reporte</a></li>
+                  <li><a href="#">Ajustar errores</a></li>
                 </ul>
-              </li>
-            </ul>
+
           </div><!--/.nav-collapse -->
         </div>
       </div>
@@ -54,19 +47,22 @@
       <!-- Begin page content -->
       <div class="container">
         <div class="page-header">
-          <h1>Sticky footer with fixed navbar</h1>
+          <h1>Inventario de balones</h1>
         </div>
-        <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added within <code>#wrap</code> with <code>padding-top: 60px;</code> on the <code>.container</code>.</p>
-        <p>Back to <a href="../sticky-footer">the default sticky footer</a> minus the navbar.</p>
+        <p class="lead">Modulo del control de inventario de Hogas SAC</p>
+        <div class="row">
+        <div class="col-12 col-sm-6 col-lg-4 der">i'am a col-4</div>
+        <div class="col-12 col-sm-6 col-lg-7 col-lg-offset-1 izq">i'am a col-8</div>
       </div>
+      </div>
+      
     </div>
 
     <div id="footer">
       <div class="container">
-        <p class="text-muted credit">Example courtesy <a href="http://martinbean.co.uk">Martin Bean</a> and <a href="http://ryanfait.com/sticky-footer/">Ryan Fait</a>.</p>
+        <p class="text-muted credit">Web page:<a href="http://hogas.pe">hogas.pe</a></p>
       </div>
     </div>
-
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <script src="js/jquery.js"></script>
