extension de los demas modulos
ingreso, llenado, salida

--- a/ingreso-balones.html
+++ b/ingreso-balones.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Inventario de Balones</title>
+    <title>Ingreso de Balones</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -47,10 +47,13 @@
       <!-- Begin page content -->
       <div class="container">
         <div class="page-header">
-          <h1>Inventario de balones</h1>
+          <h1>Ingreso de balones</h1>
         </div>
-        <p class="lead">Modulo del control de inventario de Hogas SAC</p>
-       
+        <p class="lead">-----------------------</p>
+        <div class="row">
+        <div class="col-12 col-sm-6 col-lg-4 der">i'am a col-4</div>
+        <div class="col-12 col-sm-6 col-lg-7 col-lg-offset-1 izq">i'am a col-8</div>
+      </div>
       </div>
       
     </div>
