--- a/salida-balones.html
+++ b/salida-balones.html
@@ -47,10 +47,13 @@
       <!-- Begin page content -->
       <div class="container">
         <div class="page-header">
-          <h1>Inventario de balones</h1>
+          <h1>Salida de balones</h1>
         </div>
-        <p class="lead">Modulo del control de inventario de Hogas SAC</p>
-       
+        <p class="lead">-------------</p>
+        <div class="row">
+        <div class="col-12 col-sm-6 col-lg-4 der">i'am a col-4</div>
+        <div class="col-12 col-sm-6 col-lg-7 col-lg-offset-1 izq">i'am a col-8</div>
+      </div>
       </div>
       
     </div>
