check boxes index
check boxes de los index baaaa

--- a/salida-balones.html
+++ b/salida-balones.html
@@ -51,7 +51,62 @@
         </div>
         <p class="lead">-------------</p>
         <div class="row">
-        <div class="col-12 col-sm-6 col-lg-4 der">i'am a col-4</div>
+        <div class="col-12 col-sm-6 col-lg-4 der">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="input-group">
+                <span class="input-group-addon">
+                  <input type="checkbox">
+                </span>
+                <span class="input-group-addon">
+                  <label>45 Kg</label>
+                </span>
+                
+                <input type="text" class="form-control">
+              </div><!-- /input-group -->
+            </div><!-- /.col-lg-6 -->
+          </div><!-- /.row -->
+<div class="row">
+            <div class="col-lg-12">
+              <div class="input-group">
+                <span class="input-group-addon">
+                  <input type="checkbox">
+                </span>
+                <span class="input-group-addon">
+                  <label>10 Kg llave</label>
+                </span>
+                <input type="text" class="form-control">
+              </div><!-- /input-group -->
+            </div><!-- /.col-lg-6 -->
+          </div><!-- /.row -->
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="input-group">
+                <span class="input-group-addon">
+                  <input type="checkbox">
+                </span>
+                <span class="input-group-addon">
+                  <label>10 Kg presion</label>
+                </span>
+                <input type="text" class="form-control">
+              </div><!-- /input-group -->
+            </div><!-- /.col-lg-6 -->
+          </div><!-- /.row -->
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="input-group">
+                <span class="input-group-addon">
+                  <input type="checkbox">
+                </span>
+                <span class="input-group-addon">
+                  <label>5 Kg</label>
+                </span>
+                <input type="text" class="form-control">
+              </div><!-- /input-group -->
+            </div><!-- /.col-lg-6 -->
+          </div><!-- /.row -->
+
+        </div>
         <div class="col-12 col-sm-6 col-lg-7 col-lg-offset-1 izq">i'am a col-8</div>
       </div>
       </div>
